Fixed Safari layout bugs

--- a/_stylus/layout/tabs.styl
+++ b/_stylus/layout/tabs.styl
@@ -8,17 +8,23 @@
 
     .tabs-titles li
         cursor pointer
+        float left
         padding 25px 20px
-        display flex
-        align-items center
         margin-bottom 20px
         .text
             margin-left 20px
+            float left
+            max-width 59%
+            max-width calc(100% - 160px)
         h3
             color $h-color
             border-bottom 2px solid $link-color + 80%
             padding-bottom 15px
             margin-bottom 15px
+        .tab-img
+            width 140px
+            height 140px
+            float left
 
     .tabs-titles li.current
         +above($md)
